crates/reinhardt-pages/tests/ui/server_fnset/fail/missing_name.rs
use reinhardt_pages::server_fn::server_fnset;

#[server_fnset]
fn unnamed_set() {}

fn main() {}
